tests/fail/test-neg-type-conflicts-unario.ctds
bool aux(integer a){
  return !a;
}
void main(){
  
}